Completed website Vera Website with Boostrap

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   <title>Welcome To Vera | Emile Wong</title>
 </head>
 
-<body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="70">
+      <!-- Main page structure with scrollspy navigation -->
+
+      <!-- Navigation Bar -->
+      <!-- Fixed at top, collapses on mobile, contains site navigation links -->
+      <nav class="navbar navbar-expand-lg sticky-top navbar-dark">
     <div class="container">
       <a href="#" class="navbar-brand">
         <img src="images/logo.svg" alt="" width="100" />
@@ -65,8 +68,9 @@
     </div>
   </nav>
 
-  <!-- Header -->
-  <header class="header position-relative">
+        <!-- Header Section -->
+        <!-- Hero section with main headline, subtitle, and call-to-action button -->
+        <header class="header position-relative">
     <img src="images/vertical-decoration-left.svg" alt=""
       class="vertical-decoration position-absolute d-none d-md-block" />
     <div class="container">
@@ -87,8 +91,9 @@
     </div>
   </header>
 
-  <!-- Partners -->
-  <section class="partners py-4 overflow-hidden">
+        <!-- Partners Section -->
+        <!-- Displays logos of partner companies in a responsive grid -->
+        <section class="partners py-4 overflow-hidden">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 offset-lg-1">
@@ -115,8 +120,9 @@
     </div>
   </section>
 
-  <!-- Form Area -->
-  <section id="contact" class="contact my-7">
+        <!-- Contact Section -->
+        <!-- Contains contact form and company contact information -->
+        <section id="contact" class="contact my-7">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -180,8 +186,9 @@
     </div>
   </section>
 
-  <!-- Solutions -->
-  <section id="solutions" class="colutions my-5">
+        <!-- Solutions Section -->
+        <!-- Showcases key service offerings with descriptive cards and icons -->
+        <section id="solutions" class="colutions my-5">
     <div class="container">
       <div class="row mb-4">
         <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
@@ -320,8 +327,9 @@
       class="vertical-decoration position-absolute d-none d-md-block">
   </section>
 
-  <!-- Expertise -->
-  <section id="expertise" class="expertise bg-secondary py-5 my-6">
+        <!-- Expertise Section -->
+        <!-- Highlights company expertise areas with service cards -->
+        <section id="expertise" class="expertise bg-secondary py-5 my-6">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
@@ -431,8 +439,9 @@
     </div>
   </section>
 
-  <!-- Video -->
-  <section class="video my-6">
+        <!-- Video Section -->
+        <!-- Contains promotional video with modal playback functionality -->
+        <section class="video my-6">
     <div class="container">
       <div class="row">
         <div class="col-12 d-flex flex-column align-items-center">
@@ -479,8 +488,9 @@
     </div>
   </section>
 
-  <!-- Pricing -->
-  <section id="pricing" class="pricing my-6">
+        <!-- Pricing Section -->
+        <!-- Displays service pricing tiers with feature comparison -->
+        <section id="pricing" class="pricing my-6">
     <div class="container">
       <div class="row mb-4">
         <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
@@ -557,8 +567,9 @@
     </div>
   </section>
 
-  <!-- Projects -->
-  <section id="projects" class="projects my-6">
+        <!-- Projects Section -->
+        <!-- Portfolio of completed projects with image modals -->
+        <section id="projects" class="projects my-6">
     <div class="container">
       <div class="row mb-5">
         <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
@@ -790,8 +801,9 @@
     </div>
   </div>
 
-  <!-- Newsletter -->
-  <section id="newsletter" class="newsletter my-6">
+        <!-- Newsletter Section -->
+        <!-- Email subscription form for company updates -->
+        <section id="newsletter" class="newsletter my-6">
     <div class="container">
       <div class="row mb-4">
         <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
@@ -811,8 +823,9 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <section id="footer" class="footer bg-secondary py-6">
+        <!-- Footer Section -->
+        <!-- Contains site navigation, social media links, and copyright information -->
+        <section id="footer" class="footer bg-secondary py-6">
     <div class="container">
       <div class="row">
         <div class="col-md-4 my-3">
