--- a/privacy.html
+++ b/privacy.html
@@ -65,8 +65,9 @@
         </div>
     </nav>
 
-    <!-- Header -->
-    <div class="bg-secondary p-5">
+    <!-- Privacy Policy Header -->
+    <!-- Page title and brief introduction to privacy policy content -->
+    <header class="header position-relative">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -76,8 +77,9 @@
         </div>
     </div>
 
-    <!-- Page Content-->
-    <section class="my-5">
+    <!-- Privacy Policy Content Section -->
+    <!-- Detailed legal information about data collection, usage, and protection practices -->
+    <section class="privacy-content my-7">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
